--- a/roles/r_create_ansible_user/tasks/main.yml
+++ b/roles/r_create_ansible_user/tasks/main.yml
@@ -9,14 +9,14 @@
 # dev: heiko stein
 # mail: heiko.stein@etomer.com
 #
-# rel: 0.1
+# rel: 0.2
 #
 # ref:
 # - vars/main.yml
-# - files/ema_ansible
+# - files/ansible.pub.vault
 #
 # changelog:
-# -
+# - files/ansible.pub.vault crypted by ansible-vault
 #################################################
 ---
 # tasks file for r_create_ansible_user
