--- a/roles/r_check_4_rhel/tasks/main.yml
+++ b/roles/r_check_4_rhel/tasks/main.yml
@@ -1,26 +1,30 @@
-################################################
-## name: r_check_4_rhel
-##
-## function:
-## - probe os release 
-##
-## dev: heiko stein
-## mail: heiko.stein@etomer.com
-##
-## rel: 0.1
-##
-## ref:
-## - %
-##
-## changelog:
-## -
-#################################################
+###############################################
+# name: r_check_4_rhel
+#
+# function:
+# - probe os release 
+#
+# dev: heiko stein
+# mail: heiko.stein@etomer.com
+#
+# rel: 0.1
+#
+# ref:
+# - %
+#
+# changelog:
+# -
+###############################################
 ---
 # tasks file for r_check_4_rhel
 # get facts
   - block:
     - name: "reload facts"
       setup:
+#        gather_subset:
+#          - '!all'
+#          - '!any'
+#          - facter
 
     - name: "probe for rhel/centos"
       fail:
