--- a/roles/r_create_admin_user/vars/main.yml
+++ b/roles/r_create_admin_user/vars/main.yml
@@ -1,15 +1,26 @@
 # vars file for r_create_admin_user
 ---
 admin_user:
-  hstein:
-    name: hstein
-    home_dir: /home/hstein
+  admin:
+    name: admin
+    home_dir: /home/admin
     group: users
     comment: "administrativer user"
     uid: 61003
     gid: 100
-    sudo_file: hstein
-    sudo_entry: "hstein ALL=(ALL) NOPASSWD: ALL"
-    pub_key_file: "hstein.pub.vault"
-    password_file: "hstein.pw.vault"
+    sudo_file: admin
+    sudo_entry: "admin ALL=(ALL) NOPASSWD: ALL"
+    pub_key_file: "admin.pub.vault"
+    password_file: "admin.pw.vault"
+  admin1:
+    name: admin1
+    home_dir: /home/admin1
+    group: users
+    comment: "administrativer user"
+    uid: 61004
+    gid: 100
+    sudo_file: admin1
+    sudo_entry: "admin1 ALL=(ALL) NOPASSWD: ALL"
+    pub_key_file: "admin1.pub.vault"
+    password_file: "admin1.pw.vault"
 noop:
