--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 alias _ri="ansible-playbook --user=root --ask-pass"
 alias _ra="ansible-playbook --user=ansible --private-key=~/.ssh/ansible.priv"
+alias _rc="ansible --user=ansible --private-key=~/.ssh/ansible.priv"
