--- a/ansible.cfg
+++ b/ansible.cfg
@@ -139,7 +139,7 @@ inventory      = ./inventories/hosts
 # If set, configures the path to the Vault password file as an alternative to
 # specifying --vault-password-file on the command line.
 #vault_password_file = /path/to/vault_password_file
-vault_password_file = ./.vault_pass
+vault_password_file = ./.secret
 
 # format of string {{ ansible_managed }} available within Jinja2
 # templates indicates to users editing templates files will be replaced.
