- add role for configuration of sshd - add feature for installing linux repositories by pattern-based selection

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-alias _ri="ansible-playbook --user=root --ask-pass"
-alias _ra="ansible-playbook --user=ansible --private-key=~/tools/ansible/projects/ansible-bootstrap/files/ansible.priv"
-alias _rc="ansible --user=ansible --private-key=~/tools/ansible/projects/ansible-bootstrap/files/ansible.priv"
+WDIR="${HOME}/tools/ansible/projects/ansible-bootstrap"
+#
+alias _rc='ansible --user=ansible --private-key=${WDIR}/files/ansible.priv '
+alias _ra='ansible-playbook --user=ansible --private-key=${WDIR}/files/ansible.priv'
+alias _ri='ansible-playbook --user=root --ask-pass'
+alias _sx='ansible-playbook --syntax-check'
