--- a/p_base_configure_ansible.yml
+++ b/p_base_configure_ansible.yml
@@ -15,7 +15,7 @@
 ################################################
 
 ---
-- name: "configure ansible client at {{ ansible_play_hosts | to_nice_yaml }}"
+- name: "configure ansible client at {{ ansible_play_hosts | to_yaml }}"
   hosts: "{{ group_name | default('all') }}"
   gather_facts: no
   any_errors_fatal: true
