--- a/p_base_configure_os.yml
+++ b/p_base_configure_os.yml
@@ -3,21 +3,19 @@
 #
 # function: 
 # - configure dns
-# - configure ntp
-# - configure ca
-# - configure repositories
-# - update os
 #
 # dev: heiko stein
 # mail: heiko.stein@etomer.com
 #
-# rel: 0.1
+# rel: 0.2
 # changelog:
-# -
+# - run of os depend roles by name prefix 
+# - prefix for rhel derivats (centos/rhel) is build in r_check_4_rhel
+# - use prefix var 'runtime_dist_flag' at role call and rename of the role 
 ################################################
 
 ---
-- name: "configure os at {{ ansible_play_hosts | to_nice_yaml }}"
+- name: "configure os at {{ ansible_play_hosts | to_yaml }}"
   hosts: "{{ group_name | default('all') }}"
   gather_facts: no
   any_errors_fatal: true
@@ -51,12 +49,6 @@
 ################################################
   tasks:
   - block:
-    - name: "role configure /etc/hosts"
-      include_role:
-        name: r_configure_hosts_file
-      tags: 
-      - configure_hosts_file
-
     - name: "role create admin user"
       include_role:
         name: r_create_admin_user
@@ -69,7 +61,7 @@
       tags:
       - configure_dns
 
-    - name: "role configure ntp"
+    - name: "role configure ntp service"
       include_role:
         name: r_configure_ntp
       tags: 
@@ -105,11 +97,17 @@
       tags: 
       - reboot_nodes
 
-    - name: "probe systemd services"
+    - name: "role probe state systemd services"
       include_role:
         name: r_probe_services
       tags: 
       - probe_services
+
+    - name: "role configure sshd service"
+      include_role:
+        name: r_configure_sshd
+      tags: 
+      - configure_sshd
 
     rescue:
     - fail:
