--- a/roles/r_configure_ntp/vars/main.yml
+++ b/roles/r_configure_ntp/vars/main.yml
@@ -2,8 +2,10 @@
 ---
 chrony:
   serverlist: 
-    - 10.32.29.18
-    - 10.32.29.19
+    - 0.de.pool.ntp.org
+    - 1.de.pool.ntp.org
+    - 2.de.pool.ntp.org
+    - 3.de.pool.ntp.org
   driftfile: "/var/lib/chrony/drift"
   keyfile: "/etc/chrony.keys"
   logdir: "/var/log/chrony"
