- change of used ansible module form yum to dnf

--- a/roles/r_update_all.rh-8/tasks/main.yml
+++ b/roles/r_update_all.rh-8/tasks/main.yml
@@ -19,7 +19,7 @@
 # tasks file for r_update_all
   - block:
     - name: "update all packages"
-      yum:
+      dnf:
         name: "*"
         state: latest
 
