--- a/roles/r_configure_dns/vars/main.yml
+++ b/roles/r_configure_dns/vars/main.yml
@@ -1,4 +1,4 @@
 ---
 # vars file for r_configure_dns
-search_domain: "fritz.box"
-nameserver_list: ["10.10.10.254"]
+search_domain: "localdomain"
+nameserver_list: ["8.8.8.8"]
