--- a/p_base_configure_os.yml
+++ b/p_base_configure_os.yml
@@ -58,19 +58,19 @@
       tags:
       - deploy_ca
 
-    - name: "role configure repos {{ runtime_dist_flag }}"
+    - name: "role configure repos"
       include_role:
         name: r_configure_linux_repos.{{ runtime_dist_flag }}
       tags: 
       - configure_linux_repos
 
-    - name: "role configure yum-cron {{ runtime_dist_flag }}"
+    - name: "role configure auto update"
       include_role:
-        name: r_configure_yum_cron.{{ runtime_dist_flag }}
+        name: r_configure_auto_update.{{ runtime_dist_flag }}
       tags: 
-      - configure_yum_cron
+      - configure_auto_update
 
-    - name: "role update all {{ runtime_dist_flag }}"
+    - name: "role update all"
       include_role:
         name: r_update_all.{{ runtime_dist_flag }}
       tags: 
