--- a/roles/r_configure_auto_update.rh-7/handlers/main.yml
+++ b/roles/r_configure_auto_update.rh-7/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
-# handlers file for r_configure_auto_update
+# handlers file for r_configure_yum_cron
+  - name: "reload_yum_cron"
+    service:
+      name: yum-cron
+      state: restarted
+
