--- a/.env
+++ b/.env
@@ -1,6 +1,15 @@
 WDIR="${HOME}/tools/ansible/projects/ansible-bootstrap"
 #
+eval `ssh-agent -s`
+ssh-add ${WDIR}/files/*priv
+#
 alias _rc='ansible --user=ansible --private-key=${WDIR}/files/ansible.priv '
 alias _ra='ansible-playbook --user=ansible --private-key=${WDIR}/files/ansible.priv'
 alias _ri='ansible-playbook --user=root --ask-pass'
 alias _sx='ansible-playbook --syntax-check'
+
+export ANSIBLE_DISPLAY_FAILED_STDERR=no
+export ANSIBLE_DISPLAY_OK_HOSTS=yes
+export ANSIBLE_DISPLAY_SKIPPED_HOSTS=no
+export ANSIBLE_SHOW_CUSTOM_STATS=no
+export ANSIBLE_SHOW_PER_HOST_START=no
