--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 WDIR="${HOME}/tools/ansible/projects/ansible-bootstrap"
 #
+chmod 0600 ${WDIR}/files/*priv
 eval `ssh-agent -s`
 ssh-add ${WDIR}/files/*priv
 #
