add --become to _rc alias

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ chmod 0600 ${WDIR}/files/*priv
 eval `ssh-agent -s`
 ssh-add ${WDIR}/files/*priv
 #
-alias _rc='ansible --user=ansible --private-key=${WDIR}/files/ansible.priv '
+alias _rc='ansible --become --user=ansible --private-key=${WDIR}/files/ansible.priv '
 alias _ra='ansible-playbook --user=ansible --private-key=${WDIR}/files/ansible.priv'
 alias _ri='ansible-playbook --user=root --ask-pass'
 alias _sx='ansible-playbook --syntax-check'
