--- a/.env
+++ b/.env
@@ -1,11 +1,4 @@
-WDIR="${HOME}/tools/ansible/projects/ansible-bootstrap"
-#
-chmod 0600 ${WDIR}/files/*priv
-eval `ssh-agent -s`
-ssh-add ${WDIR}/files/*priv
-#
-alias _rc='ansible --become --user=ansible --private-key=${WDIR}/files/ansible.priv '
-alias _ra='ansible-playbook --user=ansible --private-key=${WDIR}/files/ansible.priv'
+alias _ra='ansible-playbook --user=ansible '
 alias _ri='ansible-playbook --user=root --ask-pass'
 alias _sx='ansible-playbook --syntax-check'
 
