--- a/roles/r_configure_firewall.rh-7/tasks/main.yml
+++ b/roles/r_configure_firewall.rh-7/tasks/main.yml
@@ -16,6 +16,32 @@
       loop:
         - firewalld
 
+    - name: "configure firewalld - ports"
+      firewalld:
+        zone: "{{ item.value.zone }}"
+        port: "{{ item.value.port }}/tcp"
+        permanent: true
+        state: enabled
+        immediate: yes
+      loop: "{{ firewall_port_based | dict2items}}"
+
+    - name: "configure firewalld - services"
+      firewalld:
+        zone: "{{ item.value.zone }}"
+        service: "{{ item.value.service }}"
+        permanent: true
+        state: enabled
+        immediate: yes
+      loop: "{{ firewall_svc_based | dict2items}}"
+
+    - name: "configure firewalld masqerade"
+      firewalld:
+        masquerade: "yes"
+        permanent: true
+        state: enabled
+        zone: public
+        immediate: yes
+
     rescue:
     - fail:
         msg: "configure firewall failed"
