--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ export ANSIBLE_DISPLAY_OK_HOSTS=yes
 export ANSIBLE_DISPLAY_SKIPPED_HOSTS=no
 export ANSIBLE_SHOW_CUSTOM_STATS=no
 export ANSIBLE_SHOW_PER_HOST_START=no
+
+export PROFILE_TASKS_SORT_ORDER=none
+export PROFILE_TASKS_TASK_OUTPUT_LIMIT=all
